# Ommateum

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  start.ps1
.github/workflows/: ci.yml
data/train_dataset/train_20ee27f01d08/: data.yaml
data/train_dataset/train_24e042100ce0/: data.yaml
data/train_dataset/train_571dba291f76/: data.yaml
data/train_dataset/train_6415fefa6d99/: data.yaml
data/train_dataset/train_f63c0a725526/: data.yaml
docs/: AI使用反思报告.md  API.md  数据模型设计.md  架构设计报告.md
docs/umls/codes/: data-model-relation.puml  deployment.puml  rag-pipeline.puml  system-architecture.puml  training-inference-flow.puml
scripts/: segment.sh  test.sh  test_sahi.py  train.sh  train_with_rag.py
scripts/example/identify/: test.sh  train.sh
scripts/example/model/: segment.sh  train.sh
scripts/example/sam2/: test.sh  train.sh
scripts/identify/: generate_data_yaml.py  test.sh  train.sh
scripts/sam2/: fine-tuning.sh  test.sh
skills/: start.ps1
skills/nginx-1.31.2/conf/: nginx.conf
skills/ommateum-api/: API.md  api_utils.py  app.py  index.html  inference_server.py  logger_config.py  models.py  requirements.txt  serves.py  utils.py
skills/ommateum-api/css/: style.css
skills/ommateum-api/js/: main.js
skills/ommateum-api/models/: trained_bad0ae95.omt  trained_ef876777.omt
src/ommateum/: __init__.py
src/ommateum/models/: test.py  (+1 more)
tests/: conftest.py  openapi.yaml  test_main.py
周报/: 段绪礼实操第一周周报.md  赵天星实操第一周周报.md
(+21 files in other folders)
